McStas-2.5_CPU_MPICC/Vout_test/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "Vout_test_20200226_192721"
INFO: Regenerating c-file: Vout_test.c
CFLAGS=
INFO: Recompiling: ./Vout_test.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp: In function 'mcraytrace':
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:119:39: error: '_particle' undeclared (first use in this function)
   pp = Monitor_nD_Trace(&DEFS, &Vars, _particle);
                                       ^~~~~~~~~
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:119:39: note: each undeclared identifier is reported only once for each function it appears in
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:119:8: error: too many arguments to function 'Monitor_nD_Trace'
   pp = Monitor_nD_Trace(&DEFS, &Vars, _particle);
        ^~~~~~~~~~~~~~~~
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../sources/Virtual_output.comp:1008:5: note: declared here
